opam-version: "1.2"
maintainer: "stephen.dolan@cl.cam.ac.uk"
synopsis: "synopsis"
description: "description"
authors: ["Stephen Dolan"]
homepage: "https://github.com/stedolan/malfunction"
bug-reports: "https://github.com/stedolan/malfunction/issues"
dev-repo: "https://github.com/stedolan/malfunction.git"
license: "LGPL"
build:
[[ "dune" "build" "--only-packages" "%{name}%" "--root" "." "-j" jobs "@install" ]]
build-test:
[[ "dune" "build" "--only-packages" "%{name}%" "--root" "." "-j" jobs "@runtest" ]]
available: [ ocaml-version >= "4.04" ]
depends: [
  "ocamlfind"
  "dune" {build}
  "cppo" {build}
  "omd" {test}
  "craml" {test}
  "zarith"
]
